--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <body>
   <h1>Learn GitHub</h1>
+  <img src="images/IMG_1628.jpeg">
+  <img src="images/IMG_1629.jpeg">
+  <img src="images/IMG_1630.jpeg">
   <p>Just a throwaway index.html page.</p>
   <p>Another throwaway index.html page</p>
 </body>
